--- a/style.css
+++ b/style.css
@@ -8,11 +8,14 @@
     --botao-inativo: rgba(58, 55, 94, 0.5);
     --texto-fundo: rgba(58, 55, 94, 0.3);
 }
+
 body {
     background-color: var(--cor-de-fundo);
     color: var(--branco);
     font-family: 'Chakra Petch', sans-serif;
 }
+
+
 .conteudo-principal {
     display: flex;
     flex-direction: column;
@@ -71,9 +74,11 @@ body {
 .aba-conteudo.ativo{
     display:block;
 }
+
 .aba-conteudo{
     display: none;
 }
+
 .aba-conteudo-titulo-principal{
     font-size: 28px;
     text-align: center;
@@ -83,13 +88,40 @@ body {
     color: var(--verde);
     text-transform: uppercase;
 }
+
+.contador{
+    display:flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.contador-digito{
+    padding: 0 16px;
+    text-align: center;
+    min-width: 100px;
+}
+
+.contador-digito-numero{
+    font-size: 80px;
+    margin: 0;
+
+}
+
+.contador-digito-texto{
+    color: var(--verde);
+    font-size: 20px;
+    margin: 0;
+
+}
+
 @media screen and (min-width: 768px) {
     .botoes {
         display: flex;
     }
+
     .botao:first-child {
         border-radius: 40px 0 0 0;
     }
+
     .botao:last-child {
         border-radius: 0 40px 0 0;
     }
